@@ -1,3 +1,7 @@
+2000-07-19  Phil Edwards  <pme@sourceware.cygnus.com>
+
+	* docs/18_support/howto.html:  Update.
+
 2000-07-19  Benjamin Kosnik  <bkoz@milou.soma.redhat.com>
 
 	Internal consistency checks.....
